// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. landscape default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <SafeAreaView
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 15,
            "position": "relative",
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 25,
              "height": 25,
              "justifyContent": "center",
              "opacity": 1,
              "width": 25,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <Gestures
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              }
            }
          >
            <Image
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "resizeMode": "contain",
                  "width": "100%",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <OverlayGradient
        style={
          Object {
            "flex": 0,
            "height": 140,
            "justifyContent": "flex-end",
            "marginTop": "auto",
            "position": "relative",
            "width": "100%",
            "zIndex": 2,
          }
        }
      >
        <SafeAreaView>
          <View
            style={
              Object {
                "margin": 15,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 15,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 10,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </SafeAreaView>
      </OverlayGradient>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Image
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "resizeMode": "contain",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. portrait default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <SafeAreaView
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 15,
            "position": "relative",
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 25,
              "height": 25,
              "justifyContent": "center",
              "opacity": 1,
              "width": 25,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <Gestures
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              }
            }
          >
            <Image
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "resizeMode": "contain",
                  "width": "100%",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <OverlayGradient
        style={
          Object {
            "flex": 0,
            "height": 140,
            "justifyContent": "flex-end",
            "marginTop": "auto",
            "position": "relative",
            "width": "100%",
            "zIndex": 2,
          }
        }
      >
        <SafeAreaView>
          <View
            style={
              Object {
                "margin": 15,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 15,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 10,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </SafeAreaView>
      </OverlayGradient>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Image
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "resizeMode": "contain",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`3. tablet landscape default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <SafeAreaView
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 20,
            "position": "relative",
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "opacity": 1,
              "width": 30,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <Gestures
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              }
            }
          >
            <Image
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "resizeMode": "contain",
                  "width": "100%",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <OverlayGradient
        style={
          Object {
            "flex": 0,
            "height": 140,
            "justifyContent": "flex-end",
            "marginTop": "auto",
            "position": "relative",
            "width": "100%",
            "zIndex": 2,
          }
        }
      >
        <SafeAreaView>
          <View
            style={
              Object {
                "margin": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 15,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 10,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </SafeAreaView>
      </OverlayGradient>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Image
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "resizeMode": "contain",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`4. tablet portrait default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <SafeAreaView
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 20,
            "position": "relative",
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "opacity": 1,
              "width": 30,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <Gestures
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": "100%",
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              }
            }
          >
            <Image
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "resizeMode": "contain",
                  "width": "100%",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <OverlayGradient
        style={
          Object {
            "flex": 0,
            "height": 140,
            "justifyContent": "flex-end",
            "marginTop": "auto",
            "position": "relative",
            "width": "100%",
            "zIndex": 2,
          }
        }
      >
        <SafeAreaView>
          <View
            style={
              Object {
                "margin": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 15,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 10,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </SafeAreaView>
      </OverlayGradient>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <Image
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "resizeMode": "contain",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;
